--- a/drivers/gpu/drm/sprd/Kconfig
+++ b/drivers/gpu/drm/sprd/Kconfig
@@ -1,37 +1,26 @@
-config DRM_HISI_KIRIN
-	tristate "DRM Support for Hisilicon Kirin series SoCs Platform"
+config DRM_SPRD
+	tristate "DRM Support for Spreadtrum SoCs Platform"
 	depends on DRM && OF && ARM64
 	select DRM_KMS_HELPER
 	select DRM_GEM_CMA_HELPER
 	select DRM_KMS_CMA_HELPER
-	select HISI_KIRIN_DW_DSI
+	select DRM_SPRD_DSI
 	help
-	  Choose this option if you have a hisilicon Kirin chipsets(hi6220).
+	  Choose this option if you have a Spreadtrum chipsets.
 	  If M is selected the module will be called kirin-drm.
 
-config DRM_KIRIN_960
-	tristate "DRM Support for Hisilicon Kirin960 series SoCs Platform"
-	depends on DRM && OF && ARM64
-	select DRM_KMS_HELPER
-	select DRM_GEM_CMA_HELPER
-	select DRM_KMS_CMA_HELPER
-	select HISI_KIRIN_DW_DSI
-	help
-	  Choose this option if you have a hisilicon Kirin chipsets(kirin960).
-	  If M is selected the module will be called kirin-drm.
-
-config HISI_KIRIN_DW_DSI
-	tristate "HiSilicon Kirin specific extensions for Synopsys DW MIPI DSI"
-	depends on DRM_HISI_KIRIN || DRM_KIRIN_960
+config DRM_SPRD_DSI
+	tristate "Spreadtrum specific extensions for MIPI DSI Controller"
+	depends on DRM_SPRD
 	select DRM_MIPI_DSI
 	select DRM_PANEL
 	help
-	 This selects support for HiSilicon Kirin SoC specific extensions for
-	 the Synopsys DesignWare DSI driver. If you want to enable MIPI DSI on
-	 hi6220 based SoC, you should selet this option.
+	 This selects support for Spreadtrum SoC specific extensions for
+	 the DSI driver. If you want to enable MIPI DSI on Spreadtrum SoC,
+	 you should selet this option.
 
-config DRM_PANEL_HIKEY960_NTE300NTS
-	tristate "Hikey960 NTE300NTS video mode panel"
+config DRM_SPRD_PANEL
+	tristate "Spreadtrum Generic Panel Driver"
 	depends on OF
 	depends on DRM_MIPI_DSI
 	help
