--- a/drivers/gpu/drm/sprd/Makefile
+++ b/drivers/gpu/drm/sprd/Makefile
@@ -1,7 +1,7 @@
 EXTRA_CFLAGS += \
 		-Iinclude/drm
 
-kirin-drm-y := kirin_fbdev.o \
+#kirin-drm-y := kirin_fbdev.o \
 		kirin_fb.o \
 		kirin_drm_drv.o \
 		kirin_drm_dss.o \
@@ -10,6 +10,14 @@ kirin-drm-y := kirin_fbdev.o \
 		hdmi/adv7535.o \
 		hdmi/adv7535_audio.o
 
-obj-$(CONFIG_DRM_KIRIN_960) += kirin-drm.o
-obj-$(CONFIG_HISI_KIRIN_DW_DSI) += dw_drm_dsi.o
-obj-$(CONFIG_DRM_PANEL_HIKEY960_NTE300NTS) += panel/panel-hikey960-nte300nts.o
+#obj-$(CONFIG_DRM_KIRIN_960) += kirin-drm.o
+#obj-$(CONFIG_HISI_KIRIN_DW_DSI) += dw_drm_dsi.o
+#obj-$(CONFIG_DRM_PANEL_HIKEY960_NTE300NTS) += panel/panel-hikey960-nte300nts.o
+
+
+
+obj-y := sprd_drm.o \
+	sprd_dispc.o \
+#	sprd_dsi.o \
+	sprd_panel.o
+
